remove search reply from backend
